RESOLVED FIXED159897
EventTarget.dispatchEvent() parameter should not be nullable
https://bugs.webkit.org/show_bug.cgi?id=159897
Summary EventTarget.dispatchEvent() parameter should not be nullable
Chris Dumez
Reported 2016-07-18 13:48:52 PDT
EventTarget.dispatchEvent() parameter should not be nullable: - https://dom.spec.whatwg.org/#interface-eventtarget Even though the parameter is currently marked as nullable in our IDL, our implementation does a null check and we already throw a TypeError when calling dispatchEvent(null). We should update the IDL so that it matches the specification and so that the null check is generated in the bindings instead.
Attachments
Patch (10.31 KB, patch)
2016-07-18 13:51 PDT, Chris Dumez
no flags
Patch (15.41 KB, patch)
2016-07-18 15:46 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-07-18 13:51:21 PDT
Chris Dumez
Comment 2 2016-07-18 15:46:43 PDT
WebKit Commit Bot
Comment 3 2016-07-18 18:19:01 PDT
Comment on attachment 283947 [details] Patch Clearing flags on attachment: 283947 Committed r203391: <http://trac.webkit.org/changeset/203391>
WebKit Commit Bot
Comment 4 2016-07-18 18:19:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.