Source/WebCore/bindings/scripts/test/GObject/WebKitDOMTestNode.cpp
@@ -60,10 +60,12 @@ WebKitDOMTestNode* wrapTestNode(WebCore::TestNode* coreObject)
 static gboolean webkit_dom_test_node_dispatch_event(WebKitDOMEventTarget* target, WebKitDOMEvent* event, GError** error)
 {
     WebCore::Event* coreEvent = WebKit::core(event);
+    if (!coreEvent)
+        return false;
     WebCore::TestNode* coreTarget = static_cast<WebCore::TestNode*>(WEBKIT_DOM_OBJECT(target)->coreObject);
 
     WebCore::ExceptionCode ec = 0;
-    gboolean result = coreTarget->dispatchEventForBindings(coreEvent, ec);
+    gboolean result = coreTarget->dispatchEventForBindings(*coreEvent, ec);
     if (ec) {
         WebCore::ExceptionCodeDescription description(ec);
         g_set_error_literal(error, g_quark_from_string("WEBKIT_DOM"), description.code, description.name);
